# assignment1-basics

./: .gitignore  .rsyncignore  AGENTS.md  README.md  bpe-perf.sh  pyproject.toml  pyrightconfig.json
cmd/: plot_metrics.py  sweep_lr.py  train.py
cs336_basics/: _hello.pyi  bpe_encoder.py  bpe_merge.py  checkpoint.py  config.toml  hello_native.cpp  optim.py  pair_heap.py  pretoken.py  pretokenization_example.py  setup_hello.py
cs336_basics/bpe/: encode.py  merge.py  pair_heap.py  pretoken.py
cs336_basics/linear/: __init__.py  attention.py  block.py  linear.py  model.py  softmax.py  swiglu.py
cs336_basics/model/: __init__.py  adam.py  attention.py  block.py  embedding.py  model.py  prenorm.py  rope.py  softmax.py  swiglu.py
cs336_basics/re_cpp/: .gitignore  CMakeLists.txt  __init__.py  _re_cpp.pyi  re_cpp.cpp
cs336_basics/runtime/: __init__.py  device.py  loader.py  plot_memory.py
data/: .gitignore  TinyStories-train.txt-merge.json  TinyStories-train.txt-vocab.json
data/test/: bpe1-out.txt  bpe2-out.txt  bpe3-out.txt  bpe4-out.txt  bpe4.txt  bpe5-out.txt
notes/: bpe.ipynb  bpe.md  hyperparam-lr-tune.md  misc.md
re2_demo/: CMakeLists.txt  __init__.py  capture_perf.cpp  re2_demo.cpp
scripts/: bootstrap_re2_linux.sh  build_re2_demo_linux.sh  build_re_cpp_linux.sh  init_data.sh  rsync_runpod.sh  rsync_runpod_data.sh  rsync_vm.sh  runpod_resolve_ssh.py  setup_linux.sh  setup_runpod.sh  setup_train_linux.sh  validate_re2_demo.py  validate_re_cpp.py
tests/: adapters.py  test_bpe_merge.py
